@@ -821,33 +821,17 @@ public class WebServer {
 		}
 
 		//只有启用热部署和代码织入功能才需要提示
+		Global.addOpens();
 		if(config.getHotSwapInterval() >0 || config.getWeaveConfig()!=null) {
 			if(TEnv.JDK_VERSION > 8 && !"true".equals(System.getProperty("jdk.attach.allowAttachSelf"))){
 
 				System.out.println("Your are working on: JDK-" +TEnv.JDK_VERSION+". " +
 						"You should add java command arguments: " +
-						"-Djdk.attach.allowAttachSelf=true");
+						"-Djdk.attach.allowAttachSelf=true to active hotswap");
 
 				System.exit(0);
 			}
 		}
-		if(TEnv.JDK_VERSION > 14) {
-			System.out.println("Your are working on: JDK-" + TEnv.JDK_VERSION + ". " +
-					"You should add java command arguments: " +
-					"--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED " +
-					"--add-opens=java.base/sun.nio.ch=ALL-UNNAMED " +
-					"--add-opens=java.base/java.nio=ALL-UNNAMED " +
-					"--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED " +
-					"--add-opens=java.base/java.net=ALL-UNNAMED " +
-					"--add-opens=java.base/java.lang=ALL-UNNAMED " +
-					"--add-opens=java.base/java.security=ALL-UNNAMED");
-		} else if(TEnv.JDK_VERSION > 11) {
-			System.out.println("Your are working on: JDK-" + TEnv.JDK_VERSION + ". " +
-					"You should add java command arguments: " +
-					"--add-opens java.base/jdk.internal.misc=ALL-UNNAMED");
-		}
-
-
 
 		WebServer webServer = WebServer.newInstance(config);
 		return webServer;
